<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.employeedetail.EmployeeDetailActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.application.boilerplate.ui.employeedetail.EmployeeDetailViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            bind:viewModel="@{viewModel}"
            layout="@layout/toolbar_employee_detail" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:layout_width="@dimen/employee_detail_profile_image_size"
                            android:layout_height="@dimen/employee_detail_profile_image_size"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/profileImageView"/>

                        <com.application.boilerplate.ui.base.BaseTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@{viewModel.name}"
                            android:textColor="@color/white"
                            android:textSize="@dimen/employee_detail_name_font"/>

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/username_label"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/employee_detail_label_font"/>

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{viewModel.username}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/employee_detail_value_font"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/email_label"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/employee_detail_label_font"/>

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{viewModel.email}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/employee_detail_value_font"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/phone_label"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/employee_detail_label_font"/>

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{viewModel.phone}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/employee_detail_value_font"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/address_label"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/employee_detail_label_font"/>

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{viewModel.address}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/employee_detail_value_font"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/website_label"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/employee_detail_label_font"/>

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{viewModel.website}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/employee_detail_value_font"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp">

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/company_label"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/employee_detail_label_font"/>

                    <com.application.boilerplate.ui.base.BaseTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@{viewModel.company}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/employee_detail_value_font"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</layout>